# levifikri.com

./: .gitignore  00-function.md  01-variable.md  02-conditional.md  03-looping.md  04-array.md  CLAUDE.md  Makefile  _publish.yml  _quarto.yml  index.md  index.qmd  pyproject.toml  styles.css
.github/workflows/: deploy.yml
00-function/: 0-circle.html  3-square-normal.html  5-fill.html
01-variable/: 2-many-square.html  4-event.html  8-random-variable.html
02-conditional/: 11-apple-boundary.html  2-strict-right.html  4-left-right-up-down.html  6-nested-if.html  7-nested-if-boundary-check.html  boundary-check.excalidraw  boundary-preventive.excalidraw
03-looping/: 11-nested-loop-triangle.html  16-mouse-pos.html  2-loop.html  21-cool-pattern-diagonal-2.html  22-cool-pattern-without-square.html  6-modulo.html  7-modulo-3.html  8-2-loop.html
04-array/: 0-robot.html  1-robot-alien.html  3-array.html  4-moving-aliens.html  5-avoid-off-grid.html  7-collision-detection.html  8-attack.html
animations/: package-lock.json  package.json
animations/src/: libs.ts  project.ts
competitive-programming/: introduction.ipynb  philosophy.ipynb
competitive-programming/algorithm/: recursion.ipynb
competitive-programming/cryptography/: cryptographic_hash.ipynb
fun-visual-coding/: 00-introduction.md  01-function.md  02-variable.md  03-conditional.md  04-looping.md  05-array.md  array.md  conditional.md  function.md  introduction.md  looping.md  variable.md
rust/: algebraic-data-type.ipynb  borrow.ipynb  functional.ipynb  introduction.ipynb  ownership.ipynb
(+121 files in other folders)
